# drone_lidar

./: Dockerfile  README.md  cluster.rviz  docker_build.sh  kill.sh  pointcloud_parser.py  run.sh  vis.sh
workspace/: dok3_real.sh  dok3_simul.sh  gigacha_real.sh  gigacha_simul.sh  params.json  params_manual.md  pointcloud_parser.py  pointcloud_parser_backup.py  sig_int_handler.py  simul_lidar.py  simul_ros.sh
workspace/libs/: cluster_tracker.py  cluster_tracker_backup.py  i_am_map.py  test_subscriber.py  visualize_map.py
workspace/pc_ws/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
workspace/pc_ws/devel/share/drone_cluster/cmake/: drone_clusterConfig.cmake
workspace/pc_ws/devel/share/exit/cmake/: exitConfig.cmake
workspace/pc_ws/src/drone_cluster/: CMakeLists.txt  package.xml
workspace/pc_ws/src/drone_cluster/src/: minimal_pub_sub.cpp
